# fcp-gemini-server

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.api  Dockerfile.mcp  GEMINI.md  HACKATHON_READY.md  LEGAL.md  Makefile  QUICKSTART.md  README.md  SUBMISSION.md  cloudbuild-mcp.yaml  cloudbuild.yaml  coverage.json  fix_async_decorators.py  generate_mockups.py  generate_video.py  list_recipes_test.py  openapi.json  pyproject.toml  requirements-video.txt  service-mcp.yaml  service.yaml  test_generation.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: deploy.yml  integration-external.yml  security.yml
demo-video/: DOCUMENTATION.md  README.md  assemble_lofi.py  composite_terminal.py  generate_lofi_bookends.py  generate_lofi_music.py  generate_sfx.py  generate_tts_voice.py  lofi_themes.py  video-script.md
docs/: CLOUD_RUN_DEPLOYMENT_PLAN.md  COVERAGE_ANALYSIS.md  DEMO.md  DEPLOYMENT_GUIDE.md  README.md  SECURITY.md  gemini-feature-audit.md  test-standards.md  video-script.md
docs/archive/: 2026-02-09-code-review-fixes.md  2026-02-09-tool-registry-migration-DEFERRED.md  CLEANUP_SUMMARY.md  CODE_AND_DOC_REVIEW_2026-02-09.md  CODE_REVIEW_2026-02-09.md  DEPLOYMENT_CHECKLIST.md  README.md  TOOL_NAMESPACE_MAPPING.md  coverage-report-2026-02-09.md  deployment-guide.md  hackathon-audit-prompt.md  preview-code-review.md  preview-tool-guide.md  pydantic-route-models.md  screenshot-capture-guide.md  video-storyboard.md
docs/archive/plans/: 2026-02-09-achieve-100-percent-coverage.md  2026-02-09-demo-video-design.md  2026-02-09-extension-debug.md
docs/plans/: 2026-02-09-lofi-food-emoji-design.md  2026-02-09-security-hardening.md
docs/technical-debt/: TOOL_REGISTRY_DETAILED_PLAN.md  auth-comparison.md  auth-quickstart.md  authentication-architecture.md
examples/workflows/: photo_to_social.py
fern/: fern.config.json  generators.yml
fern/docs/: overview.md  quickstart.md
gemini-extension/: GEMINI.md  README.md  gemini-extension.json
gemini-extension/commands/: blog.toml  check.toml  discover.toml  donate.toml  help.toml  log.toml  nearby.toml  pantry-add.toml  pantry-remove.toml  pantry-update.toml  pantry.toml  profile.toml  recent.toml  recipe-fav.toml  recipe-save.toml  recipe.toml  recipes.toml  report.toml  scan-menu.toml  scan-receipt.toml  search.toml  share.toml  stats.toml  suggest.toml
preview_output/: file_list.txt  file_list_fixed.txt
scripts/: LOGO_GENERATION.md  LOGO_GENERATORS_COMPARISON.md  generate_logo.py  generate_logo_simple.py  generate_test_report.py
src/fcp/: __init__.py  api.py  config.py  mcp_resources.py  mcp_tool_dispatch.py  server.py  server_sse.py  settings.py
src/fcp/agents/: __init__.py  content_generator.py  discovery.py  freshness.py  media_processor.py
src/fcp/auth/: __init__.py  local.py  permissions.py
src/fcp/docs/: openapi_description.md
src/fcp/mcp/: container.py  initialize.py  protocols.py  registry.py
src/fcp/observability/: __init__.py  tool_observer.py
src/fcp/prompts/: __init__.py
src/fcp/routes/: __init__.py  agents.py  analytics.py  analyze.py  connectors.py  discovery.py  external.py  health.py  inventory.py  knowledge.py  meals.py  misc.py  parser.py  profile.py  publishing.py  recipes.py  research.py  router.py  safety.py  scheduler.py  schemas.py  search.py  social.py  video.py  voice.py
src/fcp/scheduler/: __init__.py  jobs.py
src/fcp/security/: __init__.py  input_sanitizer.py  mcp_rate_limit.py  prompt_builder.py  rate_limit.py  url_validator.py
src/fcp/services/: __init__.py  browser_automation.py  cloud_storage_backend.py  conversation_state.py  cooking_assistant.py  database.py  fda.py  firestore.py  firestore_backend.py  gemini.py  gemini_async_ops.py  gemini_base.py  gemini_constants.py  gemini_generation.py  gemini_helpers.py  gemini_live.py  image_generation.py  live_restaurant_data.py  local_storage.py  logfire_service.py  mapper.py  maps.py  media_resolution.py  portion_analyzer.py  storage.py  thinking_strategy.py
src/fcp/tools/: __init__.py  agents.py  analytics.py  analyze.py  astro.py  audio.py  blog.py  civic.py  clinical.py  connector.py  cottage.py  crud.py  discovery.py  drinks.py  enrich.py  flavor.py  function_definitions.py  inventory.py  knowledge_graph.py  parser.py  profile.py  recipe_crud.py  recipe_extractor.py  recipe_generator.py  research.py  safety.py  scaling.py  search.py  social.py  standardize.py  suggest.py  taste_buddy.py  trends.py  video.py  visual.py  voice.py
src/fcp/utils/: __init__.py  audit.py  background_tasks.py  circuit_breaker.py  demo_recording.py  errors.py  json_extractor.py  logging.py  metrics.py
tests/: __init__.py  conftest.py  constants.py  test_audio.py  test_circuit_breaker_extra.py  test_flavor_pairings.py  test_null_handling.py  test_portion_analyzer.py  test_sse_streaming.py  test_url_validator.py
tests/demo_video/: __init__.py  test_scripts_import.py
tests/fakes/: fake_gemini.py
tests/integration/: __init__.py  conftest.py  test_all_routes.py  test_donate_meal.py  test_fcp_workflows.py
tests/unit/: test_api_extra.py  test_config_settings.py  test_scheduler_availability.py  test_server_extra.py  test_server_sse.py
tests/unit/agents/: test_agents.py  test_agents_content_generator.py  test_agents_discovery.py  test_agents_freshness.py  test_agents_media_processor.py  (+6 more)
(+142 files in other folders)
